--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 byteorder = "1.5.0"
 clap = { version = "4.5.29", features = ["derive", "env"] }
 cpal = "0.15.3"
+thread-priority = "1.2.0"
