--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 byteorder = "1.5.0"
 clap = { version = "4.5.29", features = ["derive", "env"] }
 cpal = "0.15.3"
+opus = { version = "0.3.0", optional = true }
 thread-priority = "1.2.0"
+
+
+[features]
+opus = ["dep:opus"]
+default = ["opus"]
