--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -149,6 +149,11 @@ jobs:
       run: |
         cargo install cross --git https://github.com/cross-rs/cross --rev 1b8cf50d20180c1a394099e608141480f934b7f7
 
+    - name: Install required dev header packages for linux # see https://crates.io/crates/cpal
+      if: contains(matrix.TARGET, 'linux')
+      run: |
+        sudo apt-get install libasound2-dev
+
     - name: Install cross for mac and windows
       if: ${{ !contains(matrix.TARGET, 'linux') }}
       run: |
